docs: update pgk name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@datastreamapp/api",
+  "name": "@datastreamapp/datastreamjs",
   "version": "0.0.0",
   "description": "DataStream.org API helper",
   "type": "module",
